[package]
name = "bendini"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
async-stream = "0.3"
atty = "0.2"
futures = "0.3"
indicatif = "0.15"
prost = "0.7"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
thiserror = "1"

# use `=` here to match our fork belowf
# TODO: update fork to 1.4.0
tokio = { version = "=1.3.0", features = ["rt-multi-thread", "macros", "net"] }

toml = "0.5"
tower = "0.4"
url = "2"

firm-types = { version = "0.1", registry = "nix" }
tonic-middleware = { version = "0.1", registry = "nix" }

# our own version of tokio 1.3.0 with named pipes
[patch.crates-io]
tokio = {  git = "https://github.com/goodbyekansas/tokio.git", branch="named-pipes-1.3.0" }


[dev-dependencies]
tempfile = "3"
