[package]
name = "bendini"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
async-stream = "0.3"
async-trait = "0.1.50"
atty = "0.2"
chrono = "0.4.19"
der-parser = "5.1.0"
futures = "0.3"
http = "0.2.4"
indicatif = "0.15"
pem = "0.8.3"
prost = "0.7"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rustls-native-certs = "0.5.0"
rustls = "0.19.1"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9.6"
structopt = "0.3"
thiserror = "1"
webpki = "0.21.0"
x509-parser = "0.9.2"

# use `=` here to match our fork belowf
tokio = { version = "=1.4.0", features = ["rt-multi-thread", "macros", "net"] }

toml = "0.5"
tower = "0.4"
url = "2"

firm-types = { version = "0.1", registry = "nix" }
tonic-middleware = { version = "0.1", registry = "nix" }

[target.'cfg(unix)'.dependencies]
users = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[features]
default = ["tui"] # TODO: remove thiz or ded
tui = ["cursive", "cursive_tree_view"]

[dependencies.cursive]
version = "0.16"
optional = true
default-features = false
features = [ "crossterm-backend", "toml" ]

[dependencies.cursive_tree_view]
version = "0.7"
optional = true

# our own version of tokio 1.4.0 with named pipes
[patch.crates-io]
tokio = {  git = "https://github.com/goodbyekansas/tokio.git", branch="named-pipes-1.4.0" }


[dev-dependencies]
tempfile = "3"
