[package]
name = "bendini"
version = "1.0.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
ansi_term = "0.12"
async-stream = "0.3"
async-trait = "0.1.50"
atty = "0.2"
chrono = "0.4.19"
der-parser = "5.1.0"
futures = "0.3"
http = "0.2.4"
indicatif = "0.15"
pem = "0.8.3"
prost = "0.9.0"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11.6", features = ["rustls-tls"], default-features = false }
rustls-native-certs = "0.5.0"
rustls = "0.19.1"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9.6"
structopt = "0.3"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "time", "macros", "net" ] }
thiserror = "1"
webpki = "0.21.0"
x509-parser = "0.9.2"
toml = "0.5"
tower = "0.4"
url = "2"

firm-types = { version = "1.0.0", registry = "nix" }
tonic-middleware = { version = "1.0.0", registry = "nix" }

[target.'cfg(unix)'.dependencies]
users = "0.11"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
tempfile = "3"
