[package]
name = "firm-windows-installer"
version = "0.1.2"
edition = "2021"

[dependencies]
flate2 = "1"
structopt = "0.3"
tar = "0.4"
thiserror = "1"
slog = { version="2", features=["release_max_level_debug"] }
slog-term = "2"
slog-async = "2"

windows-install = { version = "1.0.0", registry = "nix" }

