[package]
name = "lomax"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-threaded"] }
toml = "0.5"
gbk-protocols = { path = "nix-deps/rust-protobuf-definitions" }

[dev-dependencies]
tempfile = "3"
