[package]
name = "lomax"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
thiserror = "1"
tokio = { version = "0.2", features = ["blocking", "rt-threaded", "macros"] }
toml = "0.5"
gbk-protocols = { path = "nix-deps/rust-protobuf-definitions" }
async-stream = "0.2"
futures = "0.3"
indicatif = "0.14"
rand = "0.7"

[dev-dependencies]
tempfile = "3"
gbk-protocols-test-helpers = { path = "nix-deps/gbk-protocols-test-helpers" }
