[package]
name = "libauth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = [ "json", "rustls-tls-native-roots" ], default-features = false }
serde = "1.0.164"
serde_json = "1.0.97"
sha2 = "0.10.7"
tempfile = "3.6.0"
thiserror = "1.0.40"
time = "=0.3.17"
tokio = { version = "1.28.2", features = [ "rt", "macros" ] }
url = "2.4.0"
uuid = { version = "1.4.0", features = [ "v4" ] }
warp = "0.3.5"
sqlite = "0.31.0"
# TODO: Highest possble version due to using rust 1.60.
# If we upgrade to rust 1.65 we can bump keyring two majors.
keyring = "0.8.0"


[dev-dependencies]
mockito = "0.31.1"
