[package]
name = "libauth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = [ "json", "rustls-tls-native-roots" ], default-features = false }
serde = "1.0.164"
serde_json = "1.0.97"
sha2 = "0.10.7"
tempfile = "3.6.0"
thiserror = "1.0.40"
time = "=0.3.17"
tokio = { version = "1.28.2", features = [ "rt", "macros" ] }
url = "2.4.0"
uuid = { version = "1.4.0", features = [ "v4" ] }
warp = "0.3.5"
sqlite = "0.31.0"
# TODO: keyring 0.9.0 seems to be the newest compatible with rust 1.60.0
#keyring = "0.9.0"

# Cert verification
rustls = { version = "0.20.7", features = [ "dangerous_configuration" ] } # Required for using client::ServerCertVerifier
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
sha1 = "0.10.5"
x509-parser = "0.9.2"
der-parser = "5.1.0"
pem = "0.8.3"

[dev-dependencies]
mockito = { version = "0.31.1", default-features = false }
