[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
url = "2.3.1"
regex = "1.8.4"

firm-protocols = { version = "1.0.0", registry = "nix" }
function = { version = "0.1.0", registry = "nix" }
