[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.6", features = ["os-poll", "os-ext"] }
serde = { version = "1.0.160" , features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.3.1"
uuid = { version = "1.3.1", features = ["v4"] }

firm-protocols = { version = "1.0.0", registry = "nix" }
function = { version = "0.1.0", registry = "nix" }

[patch.nix]
function = { version = "0.1.0", path = "../function" }
