[package]
name = "python"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

[dependencies]
firm = { version = "0.1", registry="nix", features=["net", "runtime"] }

wasi-python-shims = { version = "0.1", registry="nix" }

# https://github.com/rust-lang/libc/issues/2045
pyo3 = { git = "https://github.com/goodbyekansas/pyo3", branch = "temp-wchar-workarounds", default-features=false }

[features]
mock = ["firm/mock"]
