[package]
name = "avery"
version = "1.2.1"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
config = "0.10"
flate2 = "1"
futures = "0.3"
hex = "0.4"
hostname = "0.3.1"
jsonwebtoken = "7.2.0"
lazy_static = "1.4"
num_cpus = "1.13.0"
open = "1.6"
prost = "0.9.0"
rand = "0.8"
rayon = "1.5.0"
regex = "1"
reqwest = { version = "0.11.2", default_features = false, features = ["json", "rustls-tls"] }
ring = "0.16.20"
semver = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
simple_asn1 = "0.5.2"
slog = "2"
slog-async = "2"
slog-term = "2"
structopt = "0.3"
sudo = "0.6.0"
tar = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "time", "macros", "net", "signal"] }
toml = "0.5"
tower = "0.4.11"
typetag = "0.1"
url = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = { version = "0.3", default_features = false, features = ["tokio-rustls"] }
wasmer = "1"
wasmer-wasi = "1"

firm-types = { version = "1.0.0", registry = "nix" }
tonic-middleware = { version = "1.0.0", registry = "nix" }

[dev-dependencies]
mockito = "0.30.0"
rand_pcg = "0.3.0"
pem = "0.8"

[target.'cfg(unix)'.dependencies]
users = "0.11"
libc = "0.2.95"

[target.'cfg(windows)'.dependencies]
triggered = "0.1"
winapi = "0.3"
windows-service = "0.3"
windows-acl = "0.3"
winlog = "0.2.6"
# needed to be able to reuse Log impl
# for winlog
log = "0.4.14"
