[package]
name = "avery"
version = "2.0.2"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
async-stream = "0.3"
async-trait = "0.1.68"
config = "0.13"
futures = "0.3"
num_cpus = "1.13.0"
rayon = "1.5.0"
serde = { version = "1", features = ["derive"] }
slog = "2"
slog-async = "2"
slog-term = "2"
structopt = "0.3"
sudo = "0.6.0"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "time", "macros", "net", "signal"] }
tokio-stream = "0.1.14"
toml = "0.5"
url = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }

firm-protocols = { version = "1.0.0", registry = "nix" }
runtime = { version = "0.1.0", registry = "nix" }
registry = { version = "0.1.0", registry = "nix" }
function = { version = "0.1.0", registry = "nix" }

[dev-dependencies]
mockito = "0.30.0"

[target.'cfg(unix)'.dependencies]
users = "0.11"
libc = "0.2.95"

[target.'cfg(windows)'.dependencies]
triggered = "0.1"
winapi = "0.3"
windows-service = "0.3"
windows-acl = "0.3"
winlog = "0.2.6"
lazy_static = "1.4"
# needed to be able to reuse Log impl
# for winlog
log = "0.4.14"


[patch.nix]
runtime = { version = "0.1.0", path = "../../libraries/runtime" }
function = { version = "0.1.0", path = "../../libraries/function" }
registry = { version = "0.1.0", path = "../../libraries/registry" }

