[package]
name = "lomax"
version = "2.0.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
async-stream = "0.3.1"
chrono = "0.4.19"
config = "0.11.0"
futures = "0.3.14"
hostname = "0.3.1"
http = "0.2.4"
hyper = { version = "0.14.7", features = ["full"] }
libc = "0.2.94"
pem = "0.8.3"
rcgen =  { version = "0.8.11", features = ["pem"] }
rustls = "0.19.0"
serde = { version = "1.0.125", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
structopt = "0.3.21"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-rustls = "0.22"
tower = "0.4.7"
jsonwebtoken = "7.2.0"
lazy_static = "1"

firm-types = { version = "1.0.0", registry = "nix" }

[target.'cfg(windows)'.dependencies]
triggered = "0.1"
winapi = "0.3"
windows-acl = "0.3"
windows-service = "0.3"
winlog = "0.2.6"
# needed to be able to reuse Log impl
# for winlog
log = "0.4.14"


