[package]
name = "firm"
version = "1.0.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
lazy_static = { version = "1", optional = true }
thiserror = "1"

firm-types = { version="1.0.0", registry = "nix" }

[dev-dependencies]
lazy_static = "1"

[features]
net = []
runtime = []
mock = ["lazy_static"]
