[package]
name = "tonic-middleware"
version = "1.0.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
http = "0.2.5"
tower = "0.4.11"
tempfile = "<3.7.0"  # Only here to force cargo to not use a version that requires rust version 1.63+

firm-protocols = { version = "1.0.0", registry = "nix" }

