[package]
name = "firm"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1", optional = true }
prost = "0.6"
thiserror = "1"

firm-protocols = { path = "nix-deps/rust-firm-protocols" }

[dev-dependencies]
lazy_static = "1"

[features]
net = []
mock = ["lazy_static"]
