[package]
name = "gbk"
version = "0.1.0"
authors = ["Sakarias Johansson <sakarias.johansson@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
prost = "0.6"

[build-dependencies]
prost-build = "0.6"

[features]
net = []