[package]
name = "gbk"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
prost = "0.6"
gbk-protocols = { path = "nix-deps/rust-protobuf-definitions" }

[dev-dependencies]
lazy_static = "1"

[features]
net = []
mock = []
