[package]
name = "firm-function-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "firm_function"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.120"
thiserror = "1.0.30"

firm-function = { registry = "nix", version = "0.1.0", features = [ "host" ] }

[patch.nix]
firm-function = { path = "../rust" }
