[package]
name = "python"
version = "0.1.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2018"

[dependencies]
firm = { version = "0.1", registry="nix", features=["net", "runtime"] }
firm-types = {version="0.1", registry="nix"}

wasi-python-shims = { version = "0.1", registry="nix" }

zip = "0.5"

pyo3 = { version="0.13", default-features=false, features=["macros"] }

[features]
mock = ["firm/mock"]

# pyo3 from a good rev on main to not get accidental windows
[patch.crates-io]
pyo3 = { git = "https://github.com/PyO3/pyo3.git", rev="85f1055db8d7f13630eec22d14d98a3b92378c05" }
