[package]
name = "python"
version = "1.0.0"
authors = ["GBK Pipeline Team <pipeline@goodbyekansas.com>"]
edition = "2021"

[dependencies]
firm = { version = "1.0.0", registry="nix", features=["net", "runtime"] }
firm-types = {version="1.0.0", registry="nix"}

wasi-python-shims = { version = "1.0.0", registry="nix" }

zip = "0.5"

pyo3 = { version="0.14", default-features=false, features=["macros"] }

[features]
mock = ["firm/mock"]
